@@ -5420,30 +5420,30 @@ INSERT INTO items VALUES (22134,4,'public','1.3.6.1.4.1.12325.1.200.1.1.1.0',100
 INSERT INTO items VALUES (22135,4,'public','1.3.6.1.4.1.12325.1.200.1.1.2.0',10045,'Runtime','pfStatusRuntime',500,7,30,NULL,NULL,NULL,0,3,'','sec',1,0,NULL,'',0,'','','0.01','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
 INSERT INTO items VALUES (22136,3,'','',10046,'NETSCREEN Ping Check','icmpping',30,90,365,NULL,NULL,NULL,0,3,'','binary',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (22137,3,'','',10046,'Latency Measurement','icmppingsec',30,90,365,NULL,NULL,NULL,0,0,'','Seconds',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
-INSERT INTO items VALUES (22138,1,'public','1.3.6.1.2.1.2.2.1.14.1',10046,'NETSCREEN Interface 1 In Errors','IF-MIB::ifInErrors.1',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22139,1,'public','1.3.6.1.2.1.2.2.1.14.2',10046,'NETSCREEN Interface 2 In Errors','IF-MIB::ifInErrors.2',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22140,1,'public','1.3.6.1.2.1.2.2.1.14.3',10046,'NETSCREEN Interface 3 In Errors','IF-MIB::ifInErrors.3',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22141,1,'public','1.3.6.1.2.1.2.2.1.14.4',10046,'NETSCREEN Interface 4 In Errors','IF-MIB::ifInErrors.4',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22142,1,'public','1.3.6.1.2.1.2.2.1.10.1',10046,'NETSCREEN Interface 1 In Bytes','IF-MIB::ifInOctets.1',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22143,1,'public','1.3.6.1.2.1.2.2.1.10.2',10046,'NETSCREEN Interface 2 In Bytes','IF-MIB::ifInOctets.2',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22144,1,'public','1.3.6.1.2.1.2.2.1.10.3',10046,'NETSCREEN Interface 3 In Bytes','IF-MIB::ifInOctets.3',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22145,1,'public','1.3.6.1.2.1.2.2.1.10.4',10046,'NETSCREEN Interface 4 In Bytes','IF-MIB::ifInOctets.4',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22146,1,'public','1.3.6.1.2.1.2.2.1.20.1',10046,'NETSCREEN Interface 1 Out Errors','IF-MIB::ifOutErrors.1',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22147,1,'public','1.3.6.1.2.1.2.2.1.20.2',10046,'NETSCREEN Interface 2 Out Errors','IF-MIB::ifOutErrors.2',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22148,1,'public','1.3.6.1.2.1.2.2.1.20.3',10046,'NETSCREEN Interface 3 Out Errors','IF-MIB::ifOutErrors.3',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22149,1,'public','1.3.6.1.2.1.2.2.1.20.4',10046,'NETSCREEN Interface 4 Out Errors','IF-MIB::ifOutErrors.4',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22150,1,'public','1.3.6.1.2.1.2.2.1.16.1',10046,'NETSCREEN Interface 1 Out Bytes','IF-MIB::ifOutOctets.1',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22151,1,'public','1.3.6.1.2.1.2.2.1.16.2',10046,'NETSCREEN Interface 2 Out Bytes','IF-MIB::ifOutOctets.2',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22152,1,'public','1.3.6.1.2.1.2.2.1.16.3',10046,'NETSCREEN Interface 3 Out Bytes','IF-MIB::ifOutOctets.3',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22153,1,'public','1.3.6.1.2.1.2.2.1.16.4',10046,'NETSCREEN Interface 4 Out Bytes','IF-MIB::ifOutOctets.4',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22154,1,'public','1.3.6.1.4.1.3224.16.1.1.0',10046,'NETSCREEN CPU Average','NETSCREEN-RESOURCE-MIB::nsResCpuAvg.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22155,1,'public','1.3.6.1.4.1.3224.16.1.4.0',10046,'NETSCREEN CPU Average 15 min','NETSCREEN-RESOURCE-MIB::nsResCpuLast15Min.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22156,1,'public','1.3.6.1.4.1.3224.16.1.2.0',10046,'NETSCREEN CPU Average 1 min','NETSCREEN-RESOURCE-MIB::nsResCpuLast1Min.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22157,1,'public','1.3.6.1.4.1.3224.16.1.3.0',10046,'NETSCREEN CPU Average 5 min','NETSCREEN-RESOURCE-MIB::nsResCpuLast5Min.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22158,1,'public','1.3.6.1.4.1.3224.16.2.1.0',10046,'NETSCREEN Memory Allocated','NETSCREEN-RESOURCE-MIB::nsResMemAllocate.0',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22159,1,'public','1.3.6.1.4.1.3224.16.2.2.0',10046,'NETSCREEN Memory Free','NETSCREEN-RESOURCE-MIB::nsResMemLeft.0',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22160,1,'public','1.3.6.1.4.1.3224.16.3.2.0',10046,'NETSCREEN Session Count','NETSCREEN-RESOURCE-MIB::nsResSessAllocate.0',60,90,365,NULL,NULL,NULL,0,3,'','sessions',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
-INSERT INTO items VALUES (22161,1,'public','1.3.6.1.4.1.3224.16.3.4.0',10046,'NETSCREEN Session Failed Count','NETSCREEN-RESOURCE-MIB::nsResSessFailed.0',60,90,365,NULL,NULL,NULL,0,3,'','sessions',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22138,1,'public','1.3.6.1.2.1.2.2.1.14.1',10046,'NETSCREEN Interface 1 In Errors','ifInErrors.1',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22139,1,'public','1.3.6.1.2.1.2.2.1.14.2',10046,'NETSCREEN Interface 2 In Errors','ifInErrors.2',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22140,1,'public','1.3.6.1.2.1.2.2.1.14.3',10046,'NETSCREEN Interface 3 In Errors','ifInErrors.3',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22141,1,'public','1.3.6.1.2.1.2.2.1.14.4',10046,'NETSCREEN Interface 4 In Errors','ifInErrors.4',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22142,1,'public','1.3.6.1.2.1.2.2.1.10.1',10046,'NETSCREEN Interface 1 In Bytes','ifInOctets.1',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22143,1,'public','1.3.6.1.2.1.2.2.1.10.2',10046,'NETSCREEN Interface 2 In Bytes','ifInOctets.2',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22144,1,'public','1.3.6.1.2.1.2.2.1.10.3',10046,'NETSCREEN Interface 3 In Bytes','ifInOctets.3',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22145,1,'public','1.3.6.1.2.1.2.2.1.10.4',10046,'NETSCREEN Interface 4 In Bytes','ifInOctets.4',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22146,1,'public','1.3.6.1.2.1.2.2.1.20.1',10046,'NETSCREEN Interface 1 Out Errors','ifOutErrors.1',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22147,1,'public','1.3.6.1.2.1.2.2.1.20.2',10046,'NETSCREEN Interface 2 Out Errors','ifOutErrors.2',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22148,1,'public','1.3.6.1.2.1.2.2.1.20.3',10046,'NETSCREEN Interface 3 Out Errors','ifOutErrors.3',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22149,1,'public','1.3.6.1.2.1.2.2.1.20.4',10046,'NETSCREEN Interface 4 Out Errors','ifOutErrors.4',60,90,365,NULL,NULL,NULL,0,3,'','',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22150,1,'public','1.3.6.1.2.1.2.2.1.16.1',10046,'NETSCREEN Interface 1 Out Bytes','ifOutOctets.1',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22151,1,'public','1.3.6.1.2.1.2.2.1.16.2',10046,'NETSCREEN Interface 2 Out Bytes','ifOutOctets.2',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22152,1,'public','1.3.6.1.2.1.2.2.1.16.3',10046,'NETSCREEN Interface 3 Out Bytes','ifOutOctets.3',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22153,1,'public','1.3.6.1.2.1.2.2.1.16.4',10046,'NETSCREEN Interface 4 Out Bytes','ifOutOctets.4',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,1,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22154,1,'public','1.3.6.1.4.1.3224.16.1.1.0',10046,'NETSCREEN CPU Average','nsResCpuAvg.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22155,1,'public','1.3.6.1.4.1.3224.16.1.4.0',10046,'NETSCREEN CPU Average 15 min','nsResCpuLast15Min.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22156,1,'public','1.3.6.1.4.1.3224.16.1.2.0',10046,'NETSCREEN CPU Average 1 min','nsResCpuLast1Min.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22157,1,'public','1.3.6.1.4.1.3224.16.1.3.0',10046,'NETSCREEN CPU Average 5 min','nsResCpuLast5Min.0',60,90,365,NULL,NULL,NULL,0,3,'','percent',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22158,1,'public','1.3.6.1.4.1.3224.16.2.1.0',10046,'NETSCREEN Memory Allocated','nsResMemAllocate.0',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22159,1,'public','1.3.6.1.4.1.3224.16.2.2.0',10046,'NETSCREEN Memory Free','nsResMemLeft.0',60,90,365,NULL,NULL,NULL,0,3,'','bytes',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22160,1,'public','1.3.6.1.4.1.3224.16.3.2.0',10046,'NETSCREEN Session Count','nsResSessAllocate.0',60,90,365,NULL,NULL,NULL,0,3,'','sessions',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
+INSERT INTO items VALUES (22161,1,'public','1.3.6.1.4.1.3224.16.3.4.0',10046,'NETSCREEN Session Failed Count','nsResSessFailed.0',60,90,365,NULL,NULL,NULL,0,3,'','sessions',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'161','',0);
 INSERT INTO items VALUES (22162,0,'','',10012,'Active virtual pages','system.stat[memory,avm]',45,90,365,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (22163,0,'','',10012,'Amount of data transferred','system.stat[disk,bps]',45,90,365,NULL,NULL,NULL,0,0,'','B',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (22164,0,'','',10012,'Available physical processors in the shared pool','system.stat[cpu,app]',45,90,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
